turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:19: error: Unmatched closing brace '}' ignored here
    }
    ^LangtonsAnt:24: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:37: error: Unmatched closing brace '}' ignored here
}
^